--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,21 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <forkCount>2</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <includes>
+                        <include>**/*AutomateGet.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+
+
         </plugins>
     </build>
 
